--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -8,8 +8,11 @@
 name: OpenWrt-CI
 
 on:
+  push:
+     branches: 
+       - master
   schedule:
-    - cron: 0 20 * * *
+    - cron: 0 14 * * 5
   release:
     types: [published]
 
